@@ -36,6 +36,8 @@ it from source control: http://www.mediawiki.org/wiki/Download_from_SVN
   when the address changed
 * (bug 22664) Special:Userrights now accepts '0' as a valid user name
 * (bug 5210) preload parser now parses <noinclude>, <includeonly> and redirects
+* (bug 22709) IIS7 mishandles redirects generated by OutputPage::output() when 
+the URL contains a colon.
 
 == API changes in 1.17 ==
 
